@@ -1,0 +1,4 @@
+## Backport of reversed
+
+def reversed(seq):
+    return iter(list(seq)[::-1])
